# ephemeris-discord-bot-enhanced

./: pyproject.toml
ephemeris/discordBot/: __init__.py  bot.py  commonImports.py  guildMenuCommands.py  steamPlayerCommands.py  steamPlayerCount.py  steamPlayerGraphs.py  steamPlayerMenus.py  steamPlayerReports.py
ephemeris/discordBot/configFiles/: steamPlayerDataBase.py  usage_DB.db
ephemeris/discordBot/steam_ticket_generator/: CMakeLists.txt
ephemeris/discordBot/steam_ticket_generator/src/: ticket_close.cc  ticket_open.cc
